fix tooltip z-index

--- a/Shared/Tooltip.razor.css
+++ b/Shared/Tooltip.razor.css
@@ -33,7 +33,7 @@
     padding: 20px 20px;
     border-radius: 6px;
     text-align: left;
-    z-index: 1;
+    z-index: 10;
     opacity: 0;
     line-height: 140%;
     overflow: auto;
